--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Site title</title>
+    <title>Mateusz Roguski - Barber</title>
     <meta name="description" content="Description" />
+
+    <meta property="og:title" content="Mateusz Roguski - Barber" />
+    <meta property="og:description" content="Mam na imie Mateusz, mam 20 lat i od roku zajmuję się sztuką barberstwa." />
+    <meta property="og:url" content="https://marcingiepard.github.io/Barber-site/" />
+    <meta property="og:image" content="https://scontent-frx5-1.xx.fbcdn.net/v/t1.0-9/10983246_726318770829895_2253406390482997327_n.jpg?_nc_cat=105&_nc_oc=AQmwZzhywXJg9emiTxT17b8Jjwt0EqHvse6IcxCD9NoU8XRTVrITUlR8UKNBCA1y5f8&_nc_ht=scontent-frx5-1.xx&oh=6698a19d3d862dbb4b0399f1f08c69c8&oe=5DEBFECA" />
 
     <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link
-      rel="apple-touch-icon"
-      sizes="192x192"
-      href="assets/pwa/icons/icon-192x192.png"
-    />
 
     <link
       rel="icon"
       type="image/png"
-      href="assets/pwa/icons/icon-192x192.png"
+      href="https://png.pngtree.com/png-vector/20190425/ourlarge/pngtree-vector-scissors-icon-png-image_983650.jpg"
     />
 
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-   
+    <h1>Hello <br> My name is Mateusz and I am barber</h1>
+
     <script src="js/main.js"></script>
   </body>
 </html>
