--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Description" />
 
     <meta property="og:title" content="Mateusz Roguski - Barber" />
-    <meta property="og:description" content="Mam na imie Mateusz, mam 20 lat i od roku zajmuję się sztuką barberstwa." />
+    <meta property="og:description" content="Mam na imie Mateusz, mam 21 lat i od 3 lat zajmuję się sztuką barberstwa." />
     <meta property="og:url" content="https://marcingiepard.github.io/Barber-site/" />
     <meta property="og:image" content="https://scontent-frx5-1.xx.fbcdn.net/v/t1.0-9/10983246_726318770829895_2253406390482997327_n.jpg?_nc_cat=105&_nc_oc=AQmwZzhywXJg9emiTxT17b8Jjwt0EqHvse6IcxCD9NoU8XRTVrITUlR8UKNBCA1y5f8&_nc_ht=scontent-frx5-1.xx&oh=6698a19d3d862dbb4b0399f1f08c69c8&oe=5DEBFECA" />
 
